[package]
name = "bytefmt"
description = "an utility to parse byte string into bytes count and vice versa."
version = "0.1.7"
authors = ["Muhammad Syifa <emsifa@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["byte", "utility", "parse", "format"]
homepage = "https://github.com/emsifa/bytefmt"
repository = "https://github.com/emsifa/bytefmt"
documentation = "https://docs.rs/bytefmt/"

[dependencies]
regex = "1"